--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -4,4 +4,4 @@
     <%= link_to '編集', edit_board_path(@board), class: 'btn btn-outline-dark' %>
   </div>
 </div>
-<%= render partial: 'board', object: @board %>
+<%= render @board %>
